--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,1 +1,6 @@
-<app-header></app-header>
+<div class="jumbotron">
+    <h1 class="display-3 text-center">Task Management System</h1>
+    <hr class="my-4">
+    <h2 class="text-center">A Task Management System Developed With Angular</h2>
+    <h3 class="text-center">This is the home page</h3>
+</div>
