seperated task and task history

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -14,6 +14,9 @@
             <li>
                 <a class="nav-link" href="/tasks">Tasks</a>
             </li>
+            <li>
+                <a class="nav-link" href="/taskhistory">Tasks History</a>
+            </li>
         </ul>
 
         <form class="form-inline my-2 my-lg-0">
