--- a/src/app/tasks/task-history/task-history.component.html
+++ b/src/app/tasks/task-history/task-history.component.html
@@ -1,9 +1,6 @@
-<h1>Tasks</h1>
-
+<h1>Task History</h1>
 <div class="card-deck">
-    <div *ngFor="let task of pendingTasks">
+    <div *ngFor="let task of completedTasks">
         <app-task-card [task] = "task"></app-task-card>
     </div>
 </div>
-
-
