--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -7,3 +7,4 @@
     <li><strong>Description: </strong>{{ task.description }}</li>
     <li><strong>Remarks: </strong>{{ task.remarks }}</li>
 </ul>
+<!-- <button (click)="markAsDone()">Mark as done</button> -->
